validate-form/css. Style form

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Form Validator</title>
 </head>
@@ -33,7 +34,7 @@
                 <input type="password" id="confirmpassword" placeholder="User password">
                 <small>Error message</small>
             </div>
-            <button type="submit">Submit</button>
+            <button id="submit" class="submit" type="submit">Submit</button>
         </form>
     </div>
 
