validate-form/js. Add simple validation, need to be refactored

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="container">
-        <form id="form" class="form">
+        <form id="form" class="form" novalidate>
             <h2>Register</h2>
             <div class="form-control">
                 <label for="username">User name</label>
